Bug 1752253: Change era skeleton to "GGG" to produce the expected era field length. r=platform-i18n-reviewers,gregtatum

This is actually exploiting an ICU bug, but ensures we return the same results
as other browsers. When the ICU bug has been fixed, we can revert this back to
"G".

Differential Revision: https://phabricator.services.mozilla.com/D156413