js/src/tests/non262/Intl/DateTimeFormat/japanese-gannen-year.js
@@ -8,11 +8,11 @@ var dtf = new Intl.DateTimeFormat("ja-u-ca-japanese", {
 var endShowa = new Date("1989-01-07T00:00:00.000Z");
 var startHeisei = new Date("1989-01-08T00:00:00.000Z");
 
-assertEq(dtf.format(endShowa), "S64/1/7");
-assertEq(dtf.format(startHeisei), "H1/1/8");
+assertEq(dtf.format(endShowa), "昭和64/1/7");
+assertEq(dtf.format(startHeisei), "平成1/1/8");
 
 var parts = dtf.formatToParts(startHeisei);
-assertEq(parts.filter(p => p.type === "era")[0].value, "H");
+assertEq(parts.filter(p => p.type === "era")[0].value, "平成");
 assertEq(parts.filter(p => p.type === "year")[0].value, "1");
 
 var dtf = new Intl.DateTimeFormat("ja-u-ca-japanese", {
@@ -37,8 +37,8 @@ var dtf = new Intl.DateTimeFormat("ja-u-ca-japanese-nu-arab", {
     timeZone: "Asia/Tokyo",
 });
 
-assertEq(dtf.format(endShowa), "S٦٤/١/٧");
-assertEq(dtf.format(startHeisei), "H١/١/٨");
+assertEq(dtf.format(endShowa), "昭和٦٤/١/٧");
+assertEq(dtf.format(startHeisei), "平成١/١/٨");
 
 var dtf = new Intl.DateTimeFormat("ja-u-ca-japanese-nu-arab", {
     era: "short",
